# thunderdome

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  integration_test.go  main.go  pricing.yaml  project.md  thunderdome.yaml
docker/amplifier/amplifier-app-cli/: .gitignore  README.md  SESSION_HISTORY_TESTING.md  pyproject.toml
docker/amplifier/amplifier-app-cli/amplifier_app_cli/: __init__.py  agent_config.py  approval_provider.py  console.py  effective_config.py  incremental_save.py  key_manager.py  main.py  module_manager.py  paths.py  project_utils.py  provider_config_utils.py  provider_env_detect.py  provider_loader.py  provider_manager.py  provider_sources.py  session_runner.py  session_spawner.py  session_store.py  trace_collector.py  types.py
docker/amplifier/amplifier-app-cli/docs/: AGENT_DELEGATION_IMPLEMENTATION.md  CONTEXT_LOADING.md  INTERACTIVE_MODE.md  OUTPUT_FORMATS.md
docker/amplifier/amplifier-app-cli/tests/: test_auto_init.py  test_init_message.py  test_mentions.py  test_merge_utils.py  test_mode_trailing_prompt.py  test_provider_install.py  test_provider_manager.py  test_repl_prompt.py  test_save_command_sanitization.py  test_session_runner.py  test_session_spawner.py  test_session_store_sanitization.py
docker/amplifier/amplifier-core/: README.md  bundle.md  pyproject.toml
docker/amplifier/amplifier-core/agents/: core-expert.md
docker/amplifier/amplifier-core/ai_context/: DOCUMENTATION_LINKING.md
docker/amplifier/amplifier-core/amplifier_core/: __init__.py  approval.py  cancellation.py  cli.py  content_models.py  coordinator.py  display.py  events.py  hooks.py  interfaces.py  llm_errors.py  loader.py  message_models.py  models.py  module_sources.py  pytest_plugin.py  session.py  testing.py
docker/amplifier/amplifier-core/behaviors/: core-expert.yaml
docker/amplifier/amplifier-core/context/: kernel-overview.md
docker/amplifier/amplifier-core/docs/: CAPABILITY_REGISTRY.md  DESIGN_PHILOSOPHY.md  HOOKS_API.md  MODULE_SOURCE_PROTOCOL.md  README.md  SESSION_FORK_SPECIFICATION.md
docker/amplifier/amplifier-core/scripts/: check_related_files.py
docker/amplifier/amplifier-core/tests/: test_cancellation_resilience.py  test_contribution_channels.py  test_event_taxonomy.py  test_events_provider_retry.py  test_events_smoke.py  test_hooks.py  test_llm_errors.py  test_message_models.py  test_retry.py  test_retry_exports.py  test_session.py  test_session_id.py  test_validation.py  test_windows_encoding.py
docker/amplifier/amplifier-foundation/: .gitignore  README.md  bundle.md  pyproject.toml
docker/amplifier/amplifier-foundation/agents/: amplifier-smoke-test.md  bug-hunter.md  ecosystem-expert.md  explorer.md  file-ops.md  foundation-expert.md  git-ops.md  integration-specialist.md  modular-builder.md  post-task-cleanup.md  security-guardian.md  session-analyst.md  shell-exec.md  test-coverage.md  web-research.md  zen-architect.md
docker/amplifier/amplifier-foundation/amplifier_foundation/: __init__.py  bundle.py  exceptions.py  registry.py  serialization.py  spawn_utils.py  tracing.py  validator.py
docker/amplifier/amplifier-foundation/behaviors/: agents.yaml  amplifier-dev.yaml  foundation-expert.yaml  logging.yaml  progress-monitor.yaml  redaction.yaml  sessions.yaml  shadow-amplifier.yaml  status-context.yaml  streaming-ui.yaml  tasks.yaml  todo-reminder.yaml
docker/amplifier/amplifier-foundation/bundles/: amplifier-dev.yaml  minimal.yaml  with-anthropic.yaml  with-openai.yaml
docker/amplifier/amplifier-foundation/context/: CONTEXT_POISONING.md  IMPLEMENTATION_PHILOSOPHY.md  ISSUE_HANDLING.md  KERNEL_PHILOSOPHY.md  amplifier-shadow-tests.md  bundle-awareness.md
docker/amplifier/amplifier-foundation/docs/: AGENT_AUTHORING.md  API_REFERENCE.md  BUNDLE_GUIDE.md  CONCEPTS.md  DOMAIN_VALIDATOR_GUIDE.md  ISSUE_CASE_STUDIES.md  PATTERNS.md  POLICY_BEHAVIORS.md  PR_REVIEW_GUIDE.md  URI_FORMATS.md
docker/amplifier/amplifier-foundation/examples/: 01_hello_world.py  02_custom_configuration.py  03_custom_tool.py  04_load_and_inspect.py  05_composition.py  06_sources_and_registry.py  07_full_workflow.py  08_cli_application.py  09_multi_agent_system.py  10_meeting_notes_to_actions.py  11_provider_comparison.py  12_approval_gates.py  13_event_debugging.py  14_session_persistence.py  17_multi_model_ensemble.py  18_custom_hooks.py  19_github_actions_ci.py  20_calendar_assistant.py  21_bundle_updates.py  22_custom_orchestrator_routing.py  README.md
docker/amplifier/amplifier-foundation/experiments/: exp-amplifier-dev.md  exp-foundation.md
docker/amplifier/amplifier-foundation/notebooks/: 01_hello_world.ipynb  02_validation_checker.ipynb  03_bundle_playground.ipynb  04_composition_explorer.ipynb  05_load_and_inspect.ipynb  06_custom_configuration.ipynb  07_custom_tool.ipynb  08_full_workflow.ipynb  09_multi_agent_system.ipynb  10_provider_comparison.ipynb  11_session_persistence.ipynb  README.md
docker/amplifier/amplifier-foundation/providers/: anthropic-opus.yaml  anthropic-sonnet.yaml  openai-gpt-5.yaml  openai-gpt-codex.yaml  openai-gpt.yaml
docker/amplifier/amplifier-foundation/recipes/: validate-agents.yaml  validate-bundle-repo.yaml  validate-bundle.yaml  validate-single-bundle.yaml
docker/amplifier/amplifier-foundation/tests/: __init__.py  test_bundle.py  test_cache.py  test_dicts.py  test_install_state.py  test_io_files.py  test_mentions.py  test_paths.py  test_registry.py  test_serialization.py  test_session.py  test_sources.py  test_spawn_contract.py  test_spawn_enrichment.py  test_spawn_utils.py  test_tracing.py  test_validator.py
docker/amplifier/amplifier-foundation/utils/: providers.py
docker/amplifier/amplifier-provider-anthropic/: README.md  pyproject.toml
docker/amplifier/amplifier-provider-anthropic/amplifier_module_provider_anthropic/: __init__.py
docker/amplifier/amplifier-provider-anthropic/tests/: conftest.py  test_behavioral.py  test_error_translation.py  test_image_support.py  test_model_capabilities.py  test_retry.py  (+4 more)
docker/amplifier/amplifier-src/: .gitignore  README.md  bundle.md  pyproject.toml
(+6507 files in other folders)
