[project]
name = "amplifier-core"
version = "1.0.0"
description = "Ultra-thin core for Amplifier modular AI agent system"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
keywords = ["ai", "agents", "llm", "modular", "kernel", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "tomli>=2.0",
    "typing-extensions>=4.0",
]

[project.scripts]
amplifier-core = "amplifier_core.cli:main"

[project.entry-points."pytest11"]
amplifier_module = "amplifier_core.pytest_plugin"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-core"
Documentation = "https://github.com/microsoft/amplifier-core/tree/main/docs"
Repository = "https://github.com/microsoft/amplifier-core"
Issues = "https://github.com/microsoft/amplifier-core/issues"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_core",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

