[project]
name = "amplifier-foundation"
version = "1.0.0"
description = "Ultra-thin mechanism layer for bundle composition in Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
keywords = ["ai", "agents", "llm", "modular", "bundles", "composition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0.3",
    "amplifier-core",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-foundation"
Documentation = "https://github.com/microsoft/amplifier-foundation/tree/main/docs"
Repository = "https://github.com/microsoft/amplifier-foundation"
Issues = "https://github.com/microsoft/amplifier-foundation/issues"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_foundation",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "notebook>=7.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
