[project]
name = "amplifier"
version = "0.1.0"
description = "Amplifier AI development platform - modular AI assistant with flexible module sourcing"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core",
    "amplifier-app-cli",
]

[project.scripts]
amplifier = "amplifier_app_cli.main:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-app-cli = { git = "https://github.com/microsoft/amplifier-app-cli", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier",
]

[tool.hatch.metadata]
allow-direct-references = true
