[project]
name = "amplifier-module-hooks-progress-monitor"
version = "0.1.0"
description = "Progress monitoring hook that detects analysis paralysis patterns"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["amplifier-core>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
