[project]
name = "amplifier-module-hooks-todo-display"
version = "0.1.0"
description = "Visual progress display for todo list tool calls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = ["amplifier-core>=0.1.0"]

[project.entry-points."amplifier.modules"]
hooks-todo-display = "amplifier_module_hooks_todo_display:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_todo_display"]
