[project]
name = "amplifier-module-tool-delegate"
version = "0.1.0"
description = "Delegate tasks to specialized agents with enhanced context control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = ["amplifier-core>=0.1.0"]

[project.entry-points."amplifier.modules"]
tool-delegate = "amplifier_module_tool_delegate:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_delegate"]
